<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="15dp"
            android:text="@string/s_bank_full_name" />

        <EditText
            android:id="@+id/dialog_insert_ed_bank_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:hint="请输入中文全称"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="15dp"
            android:text="@string/s_bank_simple_name" />

        <EditText
            android:id="@+id/dialog_insert_ed_bank_simple_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入英文简称"
            android:textSize="15dp"
            android:layout_weight="0.4"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="15dp"
            android:text="@string/s_bank_owner" />

        <EditText
            android:id="@+id/dialog_insert_ed_bank_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入归属"
            android:textSize="15dp"
            android:layout_weight="0.4"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="15dp"
            android:text="@string/s_bank_password" />

        <EditText
            android:id="@+id/dialog_insert_ed_bank_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入密码"
            android:textSize="15dp"
            android:layout_weight="0.4"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="15dp"
            android:text="@string/s_bank_other" />

        <EditText
            android:id="@+id/dialog_insert_ed_bank_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入其他信息"
            android:textSize="15dp"
            android:layout_weight="0.4"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>


</LinearLayout>