<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_account_name"
            android:layout_weight="1"
            android:textSize="15dp"
            android:gravity="right"/>

        <EditText
            android:id="@+id/dialog_insert_ed_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入账号名称"
            android:textSize="15dp"
            android:layout_weight="0.4"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_account_account"
            android:layout_weight="1"
            android:textSize="15dp"
            android:gravity="right"/>

        <EditText
            android:id="@+id/dialog_insert_ed_account_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入账号"
            android:textSize="15dp"
            android:layout_weight="0.4"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_account_secret"
            android:layout_weight="1"
            android:textSize="15dp"
            android:gravity="right"/>

        <EditText
            android:id="@+id/dialog_insert_ed_account_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入提示信息"
            android:textSize="15dp"
            android:layout_weight="0.4"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_account_other"
            android:layout_weight="1"
            android:textSize="15dp"
            android:gravity="right"/>

        <EditText
            android:id="@+id/dialog_insert_ed_account_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入提示信息"
            android:textSize="15dp"
            android:layout_weight="0.4"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>



</LinearLayout>